--- a/static/css/xrhyme.css
+++ b/static/css/xrhyme.css
@@ -1,122 +1,484 @@
-.x_wrapper { width: 100%; }
-.x_container { }
-.x_item { display: inline; }
-.clearfix { zoom: 1; }
-.clearfix:after { content: ' '; clear: both; height: 0; display: block; visibility: hidden; }
-html, body, body div, span, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-abbr, address, cite, code, del, dfn, em, img, ins, kbd, q, samp,
-small, strong, sub, sup, var, b, i, dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section, summary,
-time, mark, audio, video { margin: 0; padding: 0; border: none; outline: none; font-size: 100%; list-style: none; font-style: normal; font-weight: normal; text-decoration: none; }
-article, aside, canvas, figure, figure img, figcaption, hgroup, footer, header, nav, section, audio, video { display: block; position: relative; }
-body, button, input { -webkit-font-smoothing: subpixel-antialiased; font-smooth: always; }
-::-moz-focus-inner { border: none; padding: 0; }
-::selection { background: rgba(0,0,0,.5); color: #fff; text-shadow: #fff 0 0 3px; }
-::-moz-selection { background: rgba(0,0,0,.5); color: #fff; text-shadow: #fff 0 0 3px; }
-.shadow { -webkit-box-shadow: #111 0px 0px 3px; -moz-box-shadow: #111 0px 0px 3px; box-shadow: #111 0px 0px 3px; }
-.transition { -webkit-transition: all .25s linear; -moz-transition: all .25s linear; -o-transition: all .25s linear; transition: all .25s linear; }
-.ll { float: left; }
-.rr { float: right; }
-.invisible { position: absolute !important; clip: rect(1px 1px 1px 1px); clip: rect(1px, 1px, 1px, 1px); }
-.hidden { display: none; visibility: hidden; }
-span.amp { font-family: Baskerville,Palatino,'Book Antiqua',serif; font-style: italic; }
-pre { overflow: hidden; white-space: pre-wrap; word-break: break-all; word-wrap: break-word; }
-ins { background-color: #ff9; color: #000; text-decoration: none; }
-mark { background-color: #ff9; color: #000; font-style: italic; font-weight: bold; }
-del { text-decoration: line-through; }
-abbr[title], dfn[title] { border-bottom: 1px dotted; cursor: help; text-decoration: none; }
-a, a:link, a:visited {color: #111; text-decoration: none; }
-a:hover, a:focus { color: #fff; cursor: pointer; }
-a:active { }
-html { height: 100%; background: transparent; }
-body { height: 100%; background: url('../img/bg_sora.jpg') repeat-y fixed; font: normal 12px/1.5 HelveticaNeue-Light, 'Helvetica Neue Light', 'Helvetica Neue', Helvetica, Arial, Geneva, sans-serif; color: #111; }
-#Wrapper { overflow: hidden; padding-top: 50px; margin-bottom: -15px; }
-#XContainer { overflow: hidden; width: 99999px; padding-bottom: 20px; }
-header { position: fixed; width: 300px; margin-left: 20px; z-index: 99; }
-header h1 { float: left; }
-header h1 a { font-size: 36px; font-weight: 100; line-height: 2; text-shadow: #111 0 1px 1px; }
-#Cat { color: #fc4f38; font-size: 36px; font-weight: 100; line-height: 2; text-shadow: #111 0 1px 1px; }
-#Nav { clear: left; }
-#Nav li { float: left; padding: 5px; margin: 0 10px 10px 0; background: rgba(17,17,17,.9); -webkit-box-shadow: #111 0px 0px 3px; -moz-box-shadow: #111 0px 0px 3px; box-shadow: #111 0px 0px 3px; }
-#Nav li a { display: block; width: 120px; height: 120px; line-height: 120px; text-align: center; color: #777; }
-#Avatar a { background: url('../img/Avatar.png') center no-repeat; }
-section.x_cat { float: left; padding-right: 30px; margin-left: 320px; }
-article h2 { margin: 10px 0; font: 11px/2 'Lucida Grande', Verdana, sans-serif; }
-article p { font-size: 18px; margin: 10px 0; }
-aside { }
-/* Profile */
-#Profile { }
-#Bio { height: 170px; width: 600px; }
-#Blog a:hover { color: #ff0000; }
-.split { height: 30px; width: 600px; margin: 1em 0; }
-#Social { padding-top: 30px; position: relative;}
-#Social li { float: left; margin-right: 20px; }
-#Social li a { display: block; width: 60px; height: 60px; background-color: #111; border-radius: 30px; text-indent: -999em; -webkit-box-shadow: #111 0px 0px 3px; -moz-box-shadow: #111 0px 0px 3px; box-shadow: #111 0px 0px 3px; }
-#Social li a:hover, #Social li a:focus { text-indent: 0; text-align: center; width: 80px; height: 80px; line-height: 80px; border-radius: 40px; margin: -10px; }
-/* Works */
-#Works article { float: left; margin-right: 100px; }
-.notes { float: left; width: 300px; margin-right: 30px; }
-.x_image { float: left; margin-top: 30px; border: 5px dashed #ccc; border-radius: 5px; }
-.x_image a { width: 260px; height: 260px; display: block; text-indent: -999em; }
-.x_image a:hover, .x_image a:focus { text-indent: 0; text-align: center; font: 24px/260px 'Lucida Grande', Verdana, sans-serif; background: rgba(0, 0, 0, .3); }
-#XRhymejs { background: url('../graphic/xrhyme.jpg') 50% 50% no-repeat; }
-/* BookMark */
-#Mark { width: 750px; }
-#Mark h2 { padding-left: 20px; }
-#Mark li { float: left; margin: 5px 5px 0 0; text-shadow: #111 0 1px 1px; }
-#Mark li a { width: 240px; height: 45px; display: block; padding: 10px 0 5px; color: #fff; border-radius: 6px; -webkit-transition: background-color .25s linear; -moz-transition: background-color .25s linear; -o-transition: background-color .25s linear; transition: background-color .25s linear; }
-#Mark li a:hover, #Mark li a:focus { text-shadow: #ccccd9 0 0 7px; background: rgba(164, 173, 183, .15); -webkit-box-shadow: 0 0 5px #111; -moz-box-shadow: 0 0 5px #111; box-shadow: 0 0 5px #111; }
-#Mark li a:active { padding: 12px 0 3px; }
-.x_icon { width: 40px; height: 40px; }
-#Mark li a div { float: left; display: inline; margin: 0 10px 0 15px; -webkit-transition: margin-left .25s linear; -moz-transition: margin-left .25s linear; -o-transition: margin-left .25s linear; transition: margin-left .25s linear; }
-#Mark li a:hover div { margin-left: 10px; }
-#Mark li a strong { font: 18px/20px 'Helvetica Neue', Helvetica, Arial, sans-serif; color: #aaa; display: block; padding-top: 2px; }
-/*LA.Ngised*/
-#Design article { float: left; margin-right: 100px; }
-#Design .x_image { border: 5px solid #111; border-radius: 0; }
-#Dollars { background: url('../graphic/dollars.png') 50% 50% no-repeat }
-#Etokei { background: url('../graphic/bgm_etokei.jpg') 50% 50% no-repeat }
-#Glider { background: url('../graphic/mondrian_glider.png') 50% 50% no-repeat }
-#Rhythm { background: url('../graphic/simple_rhythm.jpg') 50% 50% no-repeat }
-#Hako { background: url('../graphic/hako.png') 50% 50% no-repeat }
-footer { position: fixed; width: 100%; }
-#Bottom { width: 960px; margin: 0 auto; background: url('../img/xline.png') 50% 50% no-repeat; }
-#Bottom a {display:block;width:30px;height:30px;margin:0 459px;text-indent:-999em;box-shadow: 0 0 1px transparent;border:transparent solid 15px;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;-webkit-border-radius:15px;-moz-border-radius:15px;border-radius:15px;-webkit-transition:0.2s ease;-moz-transition:0.2s ease;-ms-transition:0.2s ease;-o-transition:0.2s ease;transition:0.2s ease;}
-#Bottom a:hover, #Bottom a:focus {border-width:0;border-color:rgba(111,233,222,0.5);-webkit-transition-duration:0.5s;-moz-transition-duration:0.5s;-ms-transition-duration:0.5s;-o-transition-duration:0.5s;transition-duration:0.5s;}
-#Bottom a:active {border-width:15px;border-color:rgba(0,0,0,0.5);-webkit-transition-duration:0.25s;-moz-transition-duration:0.25s;-ms-transition-duration:0.25s;-o-transition-duration:0.25s;transition-duration:0.25s;}
-#Jobs {width: 720px;}
-#Jobs article {margin-top: 162px; text-shadow: #111 0 1px 1px;}
-#Jobs h1{font-size: 36px; color: #111; text-align: center; -webkit-animation: fade 1s ease-in 1;}
-#Jobs h1::after{content: ''; font-size: 24px; margin-left: .5em; vertical-align: text-top;}
-#Jobs article:hover h1::after{text-shadow:#fff 0px 0px 5px; color: #fff;}
-@-webkit-keyframes fade {
-    0% {
-        margin-top: -20px;
-        opacity: 0;
-    }
-    60% {
-        margin-top: -20px;
-        opacity: 0;
-    }
-    100% {
-        margin-top: 0;
-        opacity: 1;
-    }
+.x_wrapper {
+  width: 100%;
+}
+.x_container {
+}
+.x_item {
+  display: inline;
 }
 
-#Twitter a { position: absolute; -webkit-animation: rollin 2s ease-in-out 1; text-indent: -999em !important; }
+html, body,
+h1, h2, h3, h4, h5, h6,
+p, blockquote, pre, code,
+dl, dt, dd, ol, ul, li,
+input, textarea, button, hr,
+fieldset, form, legend, table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, figure, dialog, footer, header, hgroup, menu, nav, section, details, summary, time, mark, audio, video {
+  padding: 0;
+  margin: 0;
+}
+article, aside, details, figure, figcaption, dialog, hgroup, footer, header, nav, section {
+  display: block;
+  position: relative;
+}
+body,button,input {
+  -webkit-font-smoothing: subpixel-antialiased;
+  font-smooth: always;
+}
+::-moz-focus-inner {
+  border: none;
+  padding: 0;
+}
+::selection {
+  background: rgba(0,0,0,.5);
+  color: #fff;
+  text-shadow: #fff 0 0 3px;
+}
+::-moz-selection {
+  background: rgba(0,0,0,.5);
+  color: #fff;
+  text-shadow: #fff 0 0 3px;
+}
+ol, ul, li {
+  list-style: none;
+}
+img {
+  color: transparent;
+  font-size: 0;
+  vertical-align: middle;
+  -ms-interpolation-mode: bicubic;
+}
+img::selection {
+  background: transparent;
+}
+img::-moz-selection {
+  background: transparent;
+}
+img, fieldset {
+  border: 0;
+}
+pre {
+  overflow: hidden;
+  white-space: pre-wrap;
+  word-break: break-all;
+  word-wrap: break-word;
+}
+ins {
+  background-color: #ff9;
+  color: #000;
+  text-decoration: none;
+}
+mark {
+  background-color: #ff9;
+  color: #000;
+  font-style: italic;
+  font-weight: bold;
+}
+del {
+  text-decoration: line-through;
+}
+abbr[title],dfn[title] {
+  border-bottom: 1px dotted;
+  cursor: help;
+  text-decoration: none;
+}
+sub,sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
+}
+sup {
+  top: -0.5em;
+}
+sub {
+  bottom: -0.25em;
+}
+a,a:link,a:visited {
+  color: #111;
+  text-decoration: none;
+}
+a:hover,a:focus {
+  color: #fff;
+  cursor: pointer;
+}
+a:active {
+}
+
+.clearfix {
+  zoom: 1;
+}
+.clearfix:after {
+  clear: both;
+  content: '';
+  display: table;
+}
+.shadow {
+  -webkit-box-shadow: #111 0px 0px 3px;
+  -moz-box-shadow: #111 0px 0px 3px;
+  box-shadow: #111 0px 0px 3px;
+}
+.transition {
+  -webkit-transition: all .25s linear;
+  -moz-transition: all .25s linear;
+  -o-transition: all .25s linear;
+  transition: all .25s linear;
+}
+.ll {
+  float: left;
+}
+.rr {
+  float: right;
+}
+.invisible {
+  position: absolute !important;
+  clip: rect(1px 1px 1px 1px);
+  clip: rect(1px,1px,1px,1px);
+}
+.hidden {
+  display: none;
+  visibility: hidden;
+}
+span.amp {
+  font-family: Baskerville,Palatino,'Book Antiqua',serif;
+  font-style: italic;
+  color: #42cafe;
+}
+
+html {
+  height: 100%;
+  background: transparent;
+  text-rendering: optimizeLegibility;
+}
+body {
+  min-height: 100%;
+  background: url('../img/bg_sora.jpg') repeat-y fixed;
+  font: normal 12px/1.5 HelveticaNeue-Light,'Helvetica Neue Light','Helvetica Neue',Helvetica,Arial,Geneva,sans-serif;
+  color: #111;
+}
+#Wrapper {
+  overflow: hidden;
+  padding-top: 50px;
+  margin-bottom: -15px;
+}
+#XContainer {
+  overflow: hidden;
+  width: 99999px;
+  padding-bottom: 20px;
+}
+header {
+  position: fixed;
+  width: 300px;
+  margin-left: 20px;
+  z-index: 99;
+}
+header h1 {
+  float: left;
+}
+header h1 a {
+  font-size: 36px;
+  font-weight: 100;
+  line-height: 2;
+  text-shadow: #111 0 1px 1px;
+}
+#Cat {
+  color: #fc4f38;
+  font-size: 36px;
+  font-weight: 100;
+  line-height: 2;
+  text-shadow: #111 0 1px 1px;
+}
+#Nav {
+  clear: left;
+}
+#Nav li {
+  float: left;
+  padding: 5px;
+  margin: 0 10px 10px 0;
+  background: rgba(17,17,17,.9);
+  -webkit-box-shadow: #111 0px 0px 3px;
+  -moz-box-shadow: #111 0px 0px 3px;
+  box-shadow: #111 0px 0px 3px;
+}
+#Nav li a {
+  display: block;
+  width: 120px;
+  height: 120px;
+  line-height: 120px;
+  text-align: center;
+  color: #777;
+}
+#Avatar a {
+  background: url('../img/Avatar.png') center no-repeat;
+}
+section.x_cat {
+  float: left;
+  padding-right: 30px;
+  margin-left: 320px;
+}
+article h2 {
+  margin: 10px 0;
+  font: 11px/2 'Lucida Grande',Verdana,sans-serif;
+}
+article p {
+  font-size: 18px;
+  margin: 10px 0;
+}
+aside {
+}
+/* Profile */
+#Profile {
+}
+#Bio {
+  height: 170px;
+  width: 600px;
+}
+a#Blog:hover {
+  color: #ff0000;
+}
+.split {
+  height: 30px;
+  width: 600px;
+  margin: 1em 0;
+}
+#Social {
+  padding-top: 30px;
+  position: relative;
+}
+#Social li {
+  float: left;
+  margin-right: 20px;
+}
+#Social li a {
+  display: block;
+  width: 60px;
+  height: 60px;
+  background-color: #111;
+  border-radius: 30px;
+  text-indent: -999em;
+  -webkit-box-shadow: #111 0px 0px 3px;
+  -moz-box-shadow: #111 0px 0px 3px;
+  box-shadow: #111 0px 0px 3px;
+}
+#Social li a:hover,#Social li a:focus {
+  text-indent: 0;
+  text-align: center;
+  width: 80px;
+  height: 80px;
+  line-height: 80px;
+  border-radius: 40px;
+  margin: -10px;
+}
+/* Works */
+#Works article {
+  float: left;
+  margin-right: 100px;
+}
+.notes {
+  float: left;
+  width: 300px;
+  margin-right: 30px;
+  margin-top: 13px;
+}
+.x_image {
+  float: left;
+  margin-top: 30px;
+  border: 5px dashed #ccc;
+  border-radius: 5px;
+}
+.x_image a {
+  width: 260px;
+  height: 260px;
+  display: block;
+  text-indent: -999em;
+}
+.x_image a:hover,.x_image a:focus {
+  text-indent: 0;
+  text-align: center;
+  font: 24px/260px 'Lucida Grande',Verdana,sans-serif;
+  background: rgba(0,0,0,.3);
+}
+#XRhymejs {
+  background: url('../graphic/xrhyme.jpg') 50% 50% no-repeat;
+}
+/* BookMark */
+#Mark {
+  width: 750px;
+}
+#Mark h2 {
+  padding-left: 20px;
+}
+#Mark li {
+  float: left;
+  margin: 5px 5px 0 0;
+  text-shadow: #111 0 1px 1px;
+}
+#Mark li a {
+  width: 240px;
+  height: 45px;
+  display: block;
+  padding: 10px 0 5px;
+  color: #fff;
+  border-radius: 6px;
+  -webkit-transition: background-color .25s linear;
+  -moz-transition: background-color .25s linear;
+  -o-transition: background-color .25s linear;
+  transition: background-color .25s linear;
+}
+#Mark li a:hover,#Mark li a:focus {
+  text-shadow: #ccccd9 0 0 7px;
+  background: rgba(164,173,183,.15);
+  -webkit-box-shadow: 0 0 5px #111;
+  -moz-box-shadow: 0 0 5px #111;
+  box-shadow: 0 0 5px #111;
+}
+#Mark li a:active {
+  padding: 12px 0 3px;
+}
+.x_icon {
+  width: 40px;
+  height: 40px;
+}
+#Mark li a div {
+  float: left;
+  display: inline;
+  margin: 0 10px 0 15px;
+  -webkit-transition: margin-left .25s linear;
+  -moz-transition: margin-left .25s linear;
+  -o-transition: margin-left .25s linear;
+  transition: margin-left .25s linear;
+}
+#Mark li a:hover div {
+  margin-left: 10px;
+}
+#Mark li a strong {
+  font: 18px/20px 'Helvetica Neue',Helvetica,Arial,sans-serif;
+  color: #aaa;
+  display: block;
+  padding-top: 2px;
+}
+/*LA.Ngised*/
+#Design article {
+  float: left;
+  margin-right: 100px;
+}
+#Design .x_image {
+  border: 5px solid #111;
+  border-radius: 0;
+}
+#Dollars {
+  background: url('../graphic/dollars.png') 50% 50% no-repeat
+}
+#Etokei {
+  background: url('../graphic/bgm_etokei.jpg') 50% 50% no-repeat
+}
+#Glider {
+  background: url('../graphic/mondrian_glider.png') 50% 50% no-repeat
+}
+#Rhythm {
+  background: url('../graphic/simple_rhythm.jpg') 50% 50% no-repeat
+}
+#Hako {
+  background: url('../graphic/hako.png') 50% 50% no-repeat
+}
+footer {
+  position: fixed;
+  width: 100%;
+}
+#Bottom {
+  width: 960px;
+  margin: 0 auto;
+  background: url('../img/xline.png') 50% 50% no-repeat;
+}
+#Bottom a {
+  display: block;
+  width: 30px;
+  height: 30px;
+  margin: 0 459px;
+  text-indent: -999em;
+  box-shadow: 0 0 1px transparent;
+  border: transparent solid 15px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-border-radius: 15px;
+  -moz-border-radius: 15px;
+  border-radius: 15px;
+  -webkit-transition: 0.2s ease;
+  -moz-transition: 0.2s ease;
+  -ms-transition: 0.2s ease;
+  -o-transition: 0.2s ease;
+  transition: 0.2s ease;
+}
+#Bottom a:hover,#Bottom a:focus {
+  border-width: 0;
+  border-color: rgba(111,233,222,0.5);
+  -webkit-transition-duration: 0.5s;
+  -moz-transition-duration: 0.5s;
+  -ms-transition-duration: 0.5s;
+  -o-transition-duration: 0.5s;
+  transition-duration: 0.5s;
+}
+#Bottom a:active {
+  border-width: 15px;
+  border-color: rgba(0,0,0,0.5);
+  -webkit-transition-duration: 0.25s;
+  -moz-transition-duration: 0.25s;
+  -ms-transition-duration: 0.25s;
+  -o-transition-duration: 0.25s;
+  transition-duration: 0.25s;
+}
+#Jobs {
+  width: 720px;
+}
+#Jobs article {
+  margin-top: 162px;
+  text-shadow: #111 0 1px 1px;
+}
+#Jobs h1 {
+  font-size: 36px;
+  color: #111;
+  text-align: center;
+  -webkit-animation: fade 1s ease-in 1;
+}
+#Jobs h1::after {
+  content: '';
+  font-size: 24px;
+  margin-left: .5em;
+  vertical-align: text-top;
+}
+#Jobs article:hover h1::after {
+  text-shadow: #fff 0px 0px 5px;
+  color: #fff;
+}
+@-webkit-keyframes fade {0% {
+  margin-top: -20px;
+  opacity: 0;
+}
+60% {
+  margin-top: -20px;
+  opacity: 0;
+}
+100% {
+  margin-top: 0;
+  opacity: 1;
+}
+
+}
+#Twitter a {
+  position: absolute;
+  -webkit-animation: rollin 2s ease-in-out 1;
+  text-indent: -999em !important;
+}
 @-webkit-keyframes rollin {
-    0% {
-        -webkit-transform: scale(.1) rotate(0deg);
-        right: 600px;
-        opacity: 0;
-    }
-    100% {
-        -webkit-transform: scale(1) rotate(1080deg);
-        right: 60px;
-        opacity: 1;
-    }
+  0% {
+    -webkit-transform: scale(.1) rotate(0deg);
+    right: 600px;
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: scale(1) rotate(1080deg);
+    right: 60px;
+    opacity: 1;
+  }
 }
